--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signal-channel-server",
-  "version": "0.1.0",
+  "version": "0.1.0-1",
   "description": "Static server for signal channel",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
