--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "signal-channel-server",
-  "version": "0.1.1",
+  "version": "0.1.1-1",
   "description": "Static server for signal channel",
   "keywords": [],
   "author": "Raynos <raynos2@gmail.com>",
@@ -17,7 +17,7 @@
     "email": "raynos2@gmail.com"
   },
   "dependencies": {
-    "signal-channel": "~0.2.5"
+    "signal-channel": "~0.2.7"
   },
   "devDependencies": {
     "tap": "~0.3.1"
